crates/function-metrics/tests/ui/fail/reserved_operation_suffix.rs
use function_metrics::function_metrics;

#[function_metrics(name = "already_calls_total", metrics(calls))]
fn reserved() {}

fn main() {}
